--- a/style.css
+++ b/style.css
@@ -221,7 +221,7 @@ border: 1px solid rgba(190, 194, 194, 0.3);
     appearance: none;
     width: 100%;
     height: 8px; /* Adjust the thickness */
-    background-color: #333; /* Background color of the progress bar */
+    background-color: #797d7f ; /* Background color of the progress bar */
 }
 
 #progress-bar::-webkit-slider-thumb {
@@ -303,12 +303,10 @@ border: 1px solid rgba(190, 194, 194, 0.3);
         align-items: center;
     }
 
-    /* Player and albums dimensions */
+    /* Stack player and albums vertically */
     .player, .albums {
         width: 90%;
         max-width: 100%;
-        height: auto; /* Allows height to adjust based on content */
-        padding: 15px;
         margin: 0 auto;
     }
 
